# foxtail

./: Cargo.toml  README.md
foxtail/: Cargo.toml
foxtail/src/: lib.rs  prelude.rs
foxtail/src/rendering/: atomic_counter.rs  buffer.rs  mesh.rs  mod.rs  render_pass.rs  shader.rs  texture.rs
foxtail/src/rendering/shaders/: fb_fs.glsl  vs.glsl
foxtail_demo/: Cargo.toml
foxtail_demo/src/: main.rs
foxtail_ui/: Cargo.toml
foxtail_ui/src/: lib.rs
