[package]
name = "foxtail"
version = "0.1.0"
edition = "2021"

[dependencies]
pretty_env_logger = "0.4.0"
log = "0.4"
winit = "0.28"
winit_input_helper = "0.14"
# raw-gl-context = "0.1.2"
raw-gl-context = { git = "https://github.com/Lucky4Luuk/raw-gl-context.git" }
glow = "0.12"
puffin = "0.14"

foxtail_ui = { path = "../foxtail_ui" }
